[gd_scene load_steps=28 format=3 uid="uid://das1b50eygmx8"]

[ext_resource type="Script" uid="uid://da76lsbq70rgu" path="res://Scripts/Enemies/Enemy_Jellyfish_Esp.gd" id="1_4t5cf"]
[ext_resource type="Texture2D" uid="uid://dyqeb36ox6iv0" path="res://Sprites/Player/PlayerShadow.png" id="2_gyx5k"]
[ext_resource type="Texture2D" uid="uid://mav7h4oqh8k0" path="res://Sprites/Enemies/Jellyfish_esp.png" id="3_4t5cf"]
[ext_resource type="AudioStream" uid="uid://bpw5hpam3lt6q" path="res://Audios/hit.ogg" id="4_3whcr"]
[ext_resource type="AudioStream" uid="uid://che8wgtfog0ow" path="res://Audios/bip_bomb.ogg" id="5_gyx5k"]

[sub_resource type="Gradient" id="Gradient_m07os"]
offsets = PackedFloat32Array(0, 0.7133333)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ebxm7"]
gradient = SubResource("Gradient_m07os")
fill = 1
fill_from = Vector2(0.5046729, 0.4906542)
fill_to = Vector2(1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m07os"]
radius = 8.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gyx5k"]
atlas = ExtResource("3_4t5cf")
region = Rect2(192, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqj6i"]
atlas = ExtResource("3_4t5cf")
region = Rect2(224, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3whcr"]
atlas = ExtResource("3_4t5cf")
region = Rect2(256, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3eol"]
atlas = ExtResource("3_4t5cf")
region = Rect2(288, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruwtl"]
atlas = ExtResource("3_4t5cf")
region = Rect2(320, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_itho3"]
atlas = ExtResource("3_4t5cf")
region = Rect2(352, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jayc2"]
atlas = ExtResource("3_4t5cf")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj4dx"]
atlas = ExtResource("3_4t5cf")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v6hl"]
atlas = ExtResource("3_4t5cf")
region = Rect2(64, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdb8w"]
atlas = ExtResource("3_4t5cf")
region = Rect2(96, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_paidn"]
atlas = ExtResource("3_4t5cf")
region = Rect2(128, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuelg"]
atlas = ExtResource("3_4t5cf")
region = Rect2(160, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_e6vho"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyx5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqj6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3whcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3eol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruwtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itho3")
}],
"loop": true,
"name": &"arming",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jayc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj4dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v6hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdb8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_paidn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuelg")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ebxm7"]
radius = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w24je"]
radius = 9.0
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4t5cf"]
radius = 40.1995

[sub_resource type="Animation" id="Animation_in4u0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_py107"]
resource_name = "damage"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13117078, 0.13333334, 0.26666668, 0.4, 0.56666666),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.544961, 0.016219199, 0.08873683, 1), Color(0.53745896, 0, 0.073713206, 1), Color(1, 1, 1, 1), Color(0.5174277, 0, 0.16498286, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_33lq7"]
_data = {
&"RESET": SubResource("Animation_in4u0"),
&"damage": SubResource("Animation_py107")
}

[node name="Jellyfish_esp" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_4t5cf")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -26)
color = Color(0.6431373, 0.50980395, 1, 0.4392157)
texture = SubResource("GradientTexture2D_ebxm7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_m07os")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
texture = ExtResource("2_gyx5k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -18)
sprite_frames = SubResource("SpriteFrames_e6vho")
animation = &"arming"
autoplay = "default"
frame_progress = 0.6978006

[node name="HurtBox" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(0, -18)
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, 18)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_ebxm7")
debug_color = Color(0.7490196, 0.4627451, 0, 0.3137255)

[node name="AttackHitbox" type="Area2D" parent="." groups=["Enemy"]]
rotation = 1.5707964
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
modulate = Color(0.8618463, 2.8878452e-07, 0.49752194, 1)
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_w24je")
debug_color = Color(0.8478625, 0.0009508711, 0.90637434, 0.41960785)

[node name="AudioStreamPlayer_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3whcr")

[node name="ExplosionTimer" type="Timer" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
scale = Vector2(2.1999965, 1.6800001)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
scale = Vector2(3.2763166, 4.018868)
shape = SubResource("CircleShape2D_4t5cf")

[node name="ExplosionArea" type="Area2D" parent="."]
scale = Vector2(1, 0.9600005)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_4t5cf")

[node name="WanderTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer_Bip" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gyx5k")
bus = &"Effects"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 14.0

[node name="AnimationPlayer_Damage" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_33lq7")
}

[connection signal="area_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_area_entered"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
